5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4179/executions/1667_2325.log
== TEST (2019-04-16 16:05:35) 
-- CODE:
N=input("Qual o nome do bruxo: ? DUMBLEDORE/VOLDEMORT ")
 if (N="DUMBLEDORE"):
	m=input("Espaco: ")
	s=input("Tempo? ")
	v=m*s
	print(.upper(v))
else:
-- ERROR:
File "XXXX", line 2
    if (N="DUMBLEDORE"):
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:05:39) 
-- CODE:
N=input("Qual o nome do bruxo: ? DUMBLEDORE/VOLDEMORT ")
 if (N="DUMBLEDORE"):
	m=input("Espaco: ")
	s=input("Tempo? ")
	v=m*s
	print(.upper(v))
else:
-- ERROR:
File "XXXX", line 2
    if (N="DUMBLEDORE"):
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:05:47) 
-- CODE:
N=input("Qual o nome do bruxo: ? DUMBLEDORE/VOLDEMORT ")
 if (N="DUMBLEDORE"):
	m=input("Espaco: ")
	s=input("Tempo? ")
	v=m*s
	print(.upper(v))
else:
-- ERROR:
File "XXXX", line 2
    if (N="DUMBLEDORE"):
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:05:57) 
-- CODE:
N=input("Qual o nome do bruxo: ? DUMBLEDORE/VOLDEMORT ")
 if (N="DUMBLEDORE"):
	m=input("Espaco: ")
	s=input("Tempo? ")
	v=m*s
	print(.upper(v))
else:
-- ERROR:
File "XXXX", line 2
    if (N="DUMBLEDORE"):
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:06:31) 
-- CODE:
N=input("Qual o nome do bruxo: ? DUMBLEDORE/VOLDEMORT ")
 if (N="DUMBLEDORE"):
	m=input("Espaco: ")
	s=input("Tempo? ")
	v=m*s
	print(.upper(v))
else:
-- ERROR:
File "XXXX", line 2
    if (N="DUMBLEDORE"):
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:08:41) 
-- CODE:
N=input("Qual o nome do bruxo: ? DUMBLEDORE/VOLDEMORT ")
 if (N="DUMBLEDORE"):
	m=input("Espaco: ")
	s=input("Tempo? ")
	v=m*s
	print(.upper(v))
else:
-- ERROR:
File "XXXX", line 2
    if (N="DUMBLEDORE"):
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:09:08) 
-- CODE:
N=input("Qual o nome do bruxo: ? DUMBLEDORE/VOLDEMORT ")
 if (N="DUMBLEDORE"):
	m=input("Espaco: ")
	s=input("Tempo? ")
	v=m*s
	print(.upper(v))
else:
-- ERROR:
File "XXXX", line 2
    if (N="DUMBLEDORE"):
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:09:42) 
-- CODE:
N=input("Qual o nome do bruxo: ? DUMBLEDORE/VOLDEMORT ")
 if (N="DUMBLEDORE"):
	m=input("Espaco: ")
	s=input("Tempo? ")
	v=m*s
	print(.upper(v))
else:
-- ERROR:
File "XXXX", line 2
    if (N="DUMBLEDORE"):
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:09:59) 
-- CODE:
N=input("Qual o nome do bruxo: ?")
 if ("DUMBLEDORE"):
	m=input("Espaco: ")
	s=input("Tempo? ")
	v=m*s
	print(.upper(v))
else:
-- ERROR:
File "XXXX", line 2
    if ("DUMBLEDORE"):
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:10:53) 
-- CODE:
N=input("Qual o nome do bruxo: ?")
 if ("DUMBLEDORE"):
	m=10.7654
	s=0.3479
	v=m/s
	print(.upper(v))
else:
-- ERROR:
File "XXXX", line 2
    if ("DUMBLEDORE"):
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:11:04) 
-- CODE:
N=input("Qual o nome do bruxo: ?")
 if (DUMBLEDORE):
	m=10.7654
	s=0.3479
	v=m/s
	print(.upper(v))
else:
-- ERROR:
File "XXXX", line 2
    if (DUMBLEDORE):
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:11:09) 
-- CODE:
N=input("Qual o nome do bruxo: ?")
 if (DUMBLEDORE):
	m=10.7654
	s=0.3479
	v=m/s
	print(.upper(v))
else:
-- ERROR:
File "XXXX", line 2
    if (DUMBLEDORE):
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:11:46) 
-- CODE:
nome=input("Qual o nome do bruxo: ?")

-- ERROR:
File "XXXX", line 2
    if (DUMBLEDORE):
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:12:11) 
-- CODE:
nome=input("Qual o nome do bruxo: dumbledore/voldemort?")

-- ERROR:
File "XXXX", line 2
    if (DUMBLEDORE):
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:13:33) 
-- CODE:
nome=input("Qual o nome do bruxo: dumbledore/voldemort?")
if (nome=dumbledore):
	m=10.7654
	s=0.3479
	v=m/s
	print(.upper(v))
else:
	
-- ERROR:
File "XXXX", line 2
    if (nome=dumbledore):
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:13:44) 
-- CODE:
nome=input("Qual o nome do bruxo: dumbledore/voldemort?")
if (nome="dumbledore"):
	m=10.7654
	s=0.3479
	v=m/s
	print(.upper(v))
else:
	
-- ERROR:
File "XXXX", line 2
    if (nome="dumbledore"):
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:14:09) 
-- CODE:
nome=input("Qual o nome do bruxo: dumbledore/voldemort?")
if (nome=="dumbledore"):
	m=10.7654
	s=0.3479
	v=m/s
	print(.upper(v))
else:
	
-- ERROR:
File "XXXX", line 6
    print(.upper(v))
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:14:20) 
-- CODE:
nome=input("Qual o nome do bruxo: dumbledore/voldemort?")
if (nome=="dumbledore"):
	m=10.7654
	s=0.3479
	v=m/s
	print(v)
else:
	
-- ERROR:
File "XXXX", line 9
    
     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:14:58) 
-- CODE:
nome=input("Qual o nome do bruxo: dumbledore/voldemort?")
if (nome=="dumbledore"):
	m=10.7654
	s=0.3479
	v=m/s
	print(v)
else:
	m=10.674
	s=1.789
	v=m/s
	print(v)
	
-- OUTPUT:
5.966461710452767
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:15:23) 
-- CODE:
nome=input("Qual o nome do bruxo: dumbledore/voldemort?")
if (nome=="dumbledore"):
	m=10.7654
	s=0.3479
	v=m/s
	print(v.upper())
else:
	m=10.674
	s=1.789
	v=m/s
	print(v)
	
-- OUTPUT:
5.966461710452767
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:15:50) 
-- CODE:
nome=input("Qual o nome do bruxo: dumbledore/voldemort?")
if (nome=="dumbledore"):
	m=10.7654
	s=0.3479
	v=m/s
	print(v.upper())
else:
	m=10.674
	s=1.789
	v=m/s
	print(v.upper())
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 11, in <module>
    print(v.upper())
AttributeError: 'float' object has no attribute 'upper'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:16:14) 
-- CODE:
nome=input("Qual o nome do bruxo: dumbledore/voldemort?")
if (nome=="dumbledore"):
	m=10.7654
	s=0.3479
	v=m/s
	print(.upper(v))
else:
	m=10.674
	s=1.789
	v=m/s
	print(.upper(v))
	
-- ERROR:
File "XXXX", line 6
    print(.upper(v))
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:16:55) 
-- CODE:
nome=input("Qual o nome do bruxo: dumbledore/voldemort?")
if (nome=="dumbledore"):
	m=10.7654
	s=0.3479
	v=m/s
	print(v).upper
else:
	m=10.674
	s=1.789
	v=m/s
	print(v).upper
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 11, in <module>
    print(v).upper
AttributeError: 'NoneType' object has no attribute 'upper'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:17:24) 
-- CODE:
nome=input("Qual o nome do bruxo: dumbledore/voldemort?")
if (nome=="dumbledore"):
	m=10.7654
	s=0.3479
	v=m/s
	print(v)
else:
	m=10.674
	s=1.789
	v=m/s
	print(v)
	
-- OUTPUT:
5.966461710452767
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 16:17:38) 
-- CODE:
nome=input("Qual o nome do bruxo: dumbledore/voldemort?")
if (nome=="dumbledore"):
	m=10.7654
	s=0.3479
	v=m/s
	print(v)
else:
	m=10.674
	s=1.789
	v=m/s
	print(v)
	
-- EXECUTION TIME:
0.190427
-- TEST CASE 1:
---- input:
DUMBLEDORE
---- correct output:
30.943949410750214
---- user output:
5.966461710452767
-- TEST CASE 2:
---- input:
VOLDEMORT
---- correct output:
5.966461710452767
---- user output:
5.966461710452767
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:18:05) 
-- CODE:
nome=input("Qual o nome do bruxo: dumbledore.upper/voldemort.upper ?")
if (nome=="dumbledore"):
	m=10.7654
	s=0.3479
	v=m/s
	print(v)
else:
	m=10.674
	s=1.789
	v=m/s
	print(v)
	
-- OUTPUT:
5.966461710452767
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 16:18:13) 
-- CODE:
nome=input("Qual o nome do bruxo: dumbledore.upper/voldemort.upper ?")
if (nome=="dumbledore"):
	m=10.7654
	s=0.3479
	v=m/s
	print(v)
else:
	m=10.674
	s=1.789
	v=m/s
	print(v)
	
-- EXECUTION TIME:
0.200947
-- TEST CASE 1:
---- input:
DUMBLEDORE
---- correct output:
30.943949410750214
---- user output:
5.966461710452767
-- TEST CASE 2:
---- input:
VOLDEMORT
---- correct output:
5.966461710452767
---- user output:
5.966461710452767
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 16:18:42) 
-- CODE:
nome=input("Qual o nome do bruxo: dumbledore/voldemort ?".upper())
if (nome=="dumbledore"):
	m=10.7654
	s=0.3479
	v=m/s
	print(v)
else:
	m=10.674
	s=1.789
	v=m/s
	print(v)
	
-- EXECUTION TIME:
0.183157
-- TEST CASE 1:
---- input:
DUMBLEDORE
---- correct output:
30.943949410750214
---- user output:
QUAL O NOME DO BRUXO: DUMBLEDORE/VOLDEMORT ?5.966461710452767
-- TEST CASE 2:
---- input:
VOLDEMORT
---- correct output:
5.966461710452767
---- user output:
QUAL O NOME DO BRUXO: DUMBLEDORE/VOLDEMORT ?5.966461710452767
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:18:43) 
-- CODE:
nome=input("Qual o nome do bruxo: dumbledore/voldemort ?".upper())
if (nome=="dumbledore"):
	m=10.7654
	s=0.3479
	v=m/s
	print(v)
else:
	m=10.674
	s=1.789
	v=m/s
	print(v)
	
-- OUTPUT:
QUAL O NOME DO BRUXO: DUMBLEDORE/VOLDEMORT ?5.966461710452767
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:19:25) 
-- CODE:
nome=input("Qual o nome do bruxo: dumbledore/voldemort ?".upper())
if (nome=="dumbledore"):
	m=10.7654
	s=0.3479
	v=m/s
	print(v)
else:
	m=10.674
	s=1.789
	v=m/s
	print(v)
	
-- OUTPUT:
QUAL O NOME DO BRUXO: DUMBLEDORE/VOLDEMORT ?5.966461710452767
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 16:19:31) 
-- CODE:
nome=input("Qual o nome do bruxo: dumbledore/voldemort ?".upper())
if (nome=="dumbledore"):
	m=10.7654
	s=0.3479
	v=m/s
	print(v)
else:
	m=10.674
	s=1.789
	v=m/s
	print(v)
	
-- EXECUTION TIME:
0.164497
-- TEST CASE 1:
---- input:
DUMBLEDORE
---- correct output:
30.943949410750214
---- user output:
QUAL O NOME DO BRUXO: DUMBLEDORE/VOLDEMORT ?5.966461710452767
-- TEST CASE 2:
---- input:
VOLDEMORT
---- correct output:
5.966461710452767
---- user output:
QUAL O NOME DO BRUXO: DUMBLEDORE/VOLDEMORT ?5.966461710452767
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:19:53) 
-- CODE:
nome=input("Qual o nome do bruxo: dumbledore/voldemort ?".upper())
if (nome=="dumbledore".upper()):
	m=10.7654
	s=0.3479
	v=m/s
	print(v)
else:
	m=10.674
	s=1.789
	v=m/s
	print(v)
	
-- OUTPUT:
QUAL O NOME DO BRUXO: DUMBLEDORE/VOLDEMORT ?30.943949410750214
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:20:04) 
-- CODE:
nome=input("Qual o nome do bruxo: dumbledore/voldemort ?".upper())
if (nome=="dumbledore".upper()):
	m=10.7654
	s=0.3479
	v=m/s
	print(v)
else:
	m=10.674
	s=1.789
	v=m/s
	print(v)
	
-- OUTPUT:
QUAL O NOME DO BRUXO: DUMBLEDORE/VOLDEMORT ?30.943949410750214
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 16:20:12) 
-- CODE:
nome=input("Qual o nome do bruxo: dumbledore/voldemort ?".upper())
if (nome=="dumbledore".upper()):
	m=10.7654
	s=0.3479
	v=m/s
	print(v)
else:
	m=10.674
	s=1.789
	v=m/s
	print(v)
	
-- EXECUTION TIME:
0.174807
-- TEST CASE 1:
---- input:
DUMBLEDORE
---- correct output:
30.943949410750214
---- user output:
QUAL O NOME DO BRUXO: DUMBLEDORE/VOLDEMORT ?30.943949410750214
-- TEST CASE 2:
---- input:
VOLDEMORT
---- correct output:
5.966461710452767
---- user output:
QUAL O NOME DO BRUXO: DUMBLEDORE/VOLDEMORT ?5.966461710452767
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:21:21) 
-- CODE:
nome=input("Qual o nome do bruxo: DUMBLEDORE/VOLDEMORT ?".upper())
if (nome=="DUMBLEDORE"):
	m=10.7654
	s=0.3479
	v=m/s
	print(v)
else:
	m=10.674
	s=1.789
	v=m/s
	print(v)
	
-- OUTPUT:
QUAL O NOME DO BRUXO: DUMBLEDORE/VOLDEMORT ?30.943949410750214
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:21:26) 
-- CODE:
nome=input("Qual o nome do bruxo: DUMBLEDORE/VOLDEMORT ?" .upper())
if (nome=="DUMBLEDORE"):
	m=10.7654
	s=0.3479
	v=m/s
	print(v)
else:
	m=10.674
	s=1.789
	v=m/s
	print(v)
	
-- OUTPUT:
QUAL O NOME DO BRUXO: DUMBLEDORE/VOLDEMORT ?30.943949410750214
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:21:33) 
-- CODE:
nome=input("Qual o nome do bruxo: DUMBLEDORE/VOLDEMORT ?".upper())
if (nome=="DUMBLEDORE"):
	m=10.7654
	s=0.3479
	v=m/s
	print(v)
else:
	m=10.674
	s=1.789
	v=m/s
	print(v)
	
-- OUTPUT:
QUAL O NOME DO BRUXO: DUMBLEDORE/VOLDEMORT ?30.943949410750214
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 16:21:42) 
-- CODE:
nome=input("Qual o nome do bruxo: DUMBLEDORE/VOLDEMORT ?".upper())
if (nome=="DUMBLEDORE"):
	m=10.7654
	s=0.3479
	v=m/s
	print(v)
else:
	m=10.674
	s=1.789
	v=m/s
	print(v)
	
-- EXECUTION TIME:
0.141321
-- TEST CASE 1:
---- input:
DUMBLEDORE
---- correct output:
30.943949410750214
---- user output:
QUAL O NOME DO BRUXO: DUMBLEDORE/VOLDEMORT ?30.943949410750214
-- TEST CASE 2:
---- input:
VOLDEMORT
---- correct output:
5.966461710452767
---- user output:
QUAL O NOME DO BRUXO: DUMBLEDORE/VOLDEMORT ?5.966461710452767
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:26:18) 
-- CODE:
nome=input("Qual o nome do bruxo: DUMBLEDORE/VOLDEMORT ?".upper())
if (nome=="DUMBLEDORE"):
	nome.upper()
	m=10.7654
	s=0.3479
	v=m/s
	print(v)
else:
	m=10.674
	s=1.789
	v=m/s
	print(v)
	
-- OUTPUT:
QUAL O NOME DO BRUXO: DUMBLEDORE/VOLDEMORT ?30.943949410750214
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:27:25) 
-- CODE:
nome=input("Qual o nome do bruxo: dumbledore/voldemort ?".upper())
if (nome=="dumbledore"):
	nome.upper()
	m=10.7654
	s=0.3479
	print(m/s)
else:
	m=10.674
	s=1.789
	print(m/s)
	
-- OUTPUT:
QUAL O NOME DO BRUXO: DUMBLEDORE/VOLDEMORT ?5.966461710452767
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 16:27:32) 
-- CODE:
nome=input("Qual o nome do bruxo: dumbledore/voldemort ?".upper())
if (nome=="dumbledore"):
	nome.upper()
	m=10.7654
	s=0.3479
	print(m/s)
else:
	m=10.674
	s=1.789
	print(m/s)
	
-- EXECUTION TIME:
0.182849
-- TEST CASE 1:
---- input:
DUMBLEDORE
---- correct output:
30.943949410750214
---- user output:
QUAL O NOME DO BRUXO: DUMBLEDORE/VOLDEMORT ?5.966461710452767
-- TEST CASE 2:
---- input:
VOLDEMORT
---- correct output:
5.966461710452767
---- user output:
QUAL O NOME DO BRUXO: DUMBLEDORE/VOLDEMORT ?5.966461710452767
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:27:58) 
-- CODE:
nome=input("Qual o nome do bruxo: dumbledore/voldemort ?")
if (nome=="dumbledore"):
	nome.upper()
	m=10.7654
	s=0.3479
	print(m/s)
else:
	m=10.674
	s=1.789
	print(m/s)
	
-- OUTPUT:
5.966461710452767
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 16:28:05) 
-- CODE:
nome=input("Qual o nome do bruxo: dumbledore/voldemort ?")
if (nome=="dumbledore"):
	nome.upper()
	m=10.7654
	s=0.3479
	print(m/s)
else:
	m=10.674
	s=1.789
	print(m/s)
	
-- EXECUTION TIME:
0.147816
-- TEST CASE 1:
---- input:
DUMBLEDORE
---- correct output:
30.943949410750214
---- user output:
5.966461710452767
-- TEST CASE 2:
---- input:
VOLDEMORT
---- correct output:
5.966461710452767
---- user output:
5.966461710452767
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:28:41) 
-- CODE:
nome=input("Qual o nome do bruxo:")
if (nome=="dumbledore"):
	nome.upper()
	m=10.7654
	s=0.3479
	print(m/s)
else:
	m=10.674
	s=1.789
	print(m/s)
	
-- OUTPUT:
5.966461710452767
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 16:28:48) 
-- CODE:
nome=input("Qual o nome do bruxo:")
if (nome=="dumbledore"):
	nome.upper()
	m=10.7654
	s=0.3479
	print(m/s)
else:
	m=10.674
	s=1.789
	print(m/s)
	
-- EXECUTION TIME:
0.132848
-- TEST CASE 1:
---- input:
DUMBLEDORE
---- correct output:
30.943949410750214
---- user output:
5.966461710452767
-- TEST CASE 2:
---- input:
VOLDEMORT
---- correct output:
5.966461710452767
---- user output:
5.966461710452767
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:29:06) 
-- CODE:
nome=input("Qual o nome do bruxo:")
if (nome=="dumbledore"):
	nome.upper()
	m=10.7654
	s=0.3479
	print(m/s)
else:
	m1=10.674
	s1=1.789
	print(m/s)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    print(m/s)
NameError: name 'm' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 16:29:12) 
-- CODE:
nome=input("Qual o nome do bruxo:")
if (nome=="dumbledore"):
	nome.upper()
	m=10.7654
	s=0.3479
	print(m/s)
else:
	m1=10.674
	s1=1.789
	print(m/s)
	
-- EXECUTION TIME:
0.209093
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1667/2325/main.py", line 10, in <module>
    print(m/s)
NameError: name 'm' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:29:36) 
-- CODE:
nome=input("Qual o nome do bruxo:")
if (nome=="DUMBLEDORE"):
	nome.upper()
	m=10.7654
	s=0.3479
	print(m/s)
else:
	m1=10.674
	s1=1.789
	print(m/s)
	
-- OUTPUT:
30.943949410750214
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 16:29:46) 
-- CODE:
nome=input("Qual o nome do bruxo:")
if (nome=="DUMBLEDORE"):
	nome.upper()
	m=10.7654
	s=0.3479
	print(m/s)
else:
	m1=10.674
	s1=1.789
	print(m/s)
	
-- EXECUTION TIME:
0.116973
-- TEST CASE 1:
---- input:
DUMBLEDORE
---- correct output:
30.943949410750214
---- user output:
30.943949410750214
-- TEST CASE 2:
---- input:
VOLDEMORT
---- correct output:
5.966461710452767
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:30:05) 
-- CODE:
nome=input("Qual o nome do bruxo:")
if (nome=="DUMBLEDORE"):
	nome.upper()
	m=10.7654
	s=0.3479
	print(m/s)
else:
	m1=10.674
	s1=1.789
	print(m1/s1)
	
-- OUTPUT:
30.943949410750214
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 16:30:14) 
-- CODE:
nome=input("Qual o nome do bruxo:")
if (nome=="DUMBLEDORE"):
	nome.upper()
	m=10.7654
	s=0.3479
	print(m/s)
else:
	m1=10.674
	s1=1.789
	print(m1/s1)
	
-- EXECUTION TIME:
0.160843
-- TEST CASE 1:
---- input:
DUMBLEDORE
---- correct output:
30.943949410750214
---- user output:
30.943949410750214
-- TEST CASE 2:
---- input:
VOLDEMORT
---- correct output:
5.966461710452767
---- user output:
5.966461710452767
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
